@@ -25,7 +25,6 @@
       <library name="parse-tika.jar">
          <export name="*"/>
       </library>
-      
       <library name="apache-mime4j-core-0.7.2.jar"/>
       <library name="apache-mime4j-dom-0.7.2.jar"/>
       <library name="asm-debug-all-4.1.jar"/>
@@ -37,26 +36,26 @@
       <library name="commons-compress-1.8.1.jar"/>
       <library name="commons-httpclient-3.1.jar"/>
       <library name="commons-logging-1.1.1.jar"/>
-      <library name="fontbox-1.8.6.jar"/>
+      <library name="fontbox-1.8.8.jar"/>
       <library name="isoparser-1.0.2.jar"/>
       <library name="java-libpst-0.8.1.jar"/>
       <library name="jcip-annotations-1.0.jar"/>
       <library name="jdom-1.0.jar"/>
-      <library name="jempbox-1.8.6.jar"/>
+      <library name="jempbox-1.8.8.jar"/>
       <library name="jhighlight-1.0.jar"/>
       <library name="jmatio-1.0.jar"/>
       <library name="juniversalchardet-1.0.3.jar"/>
       <library name="metadata-extractor-2.6.2.jar"/>
       <library name="netcdf-4.2.20.jar"/>
-      <library name="pdfbox-1.8.6.jar"/>
-      <library name="poi-3.11-beta2.jar"/>
-      <library name="poi-ooxml-3.11-beta2.jar"/>
-      <library name="poi-ooxml-schemas-3.11-beta2.jar"/>
-      <library name="poi-scratchpad-3.11-beta2.jar"/>
+      <library name="pdfbox-1.8.8.jar"/>
+      <library name="poi-3.11.jar"/>
+      <library name="poi-ooxml-3.11.jar"/>
+      <library name="poi-ooxml-schemas-3.11.jar"/>
+      <library name="poi-scratchpad-3.11.jar"/>
       <library name="rome-0.9.jar"/>
       <library name="slf4j-api-1.6.1.jar"/>
       <library name="tagsoup-1.2.1.jar"/>
-      <library name="tika-parsers-1.6.jar"/>
+      <library name="tika-parsers-1.7.jar"/>
       <library name="unidataCommon-4.2.20.jar"/>
       <library name="vorbis-java-core-0.6.jar"/>
       <library name="vorbis-java-tika-0.6.jar"/>
@@ -64,7 +63,7 @@
       <library name="xml-apis-1.3.03.jar"/>
       <library name="xmlbeans-2.6.0.jar"/>
       <library name="xmpcore-5.1.2.jar"/>
-      <library name="xz-1.5.jar"/>
+      <library name="xz-1.5.jar"/>   
    </runtime>
 
    <requires>
