@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Current Development 1.10-SNAPSHOT
 
+* NUTCH-1925 Upgrade to Apache Tika 1.7 (Tyler Palsulich via markus)
+
 * NUTCH-1323 AjaxNormalizer (markus)
 
 * NUTCH-1918 TikaParser specifies a default namespace when generating DOM (jnioche)
